--- a/src/app/keyboard/keyboard.component.less
+++ b/src/app/keyboard/keyboard.component.less
@@ -4,22 +4,9 @@
 			display: flex;
 			flex-direction: row;
 		}
-		&-element {
-			width: 1rem;
-			height: 100px;
-			position: relative;
+	}
 
-			&_tone-overlay {
-				position: absolute;
-				opacity: 0;
-				top: 0;
-				width: 100%;
-				height: 100%;
-				background-color: blue;
-			}
-		}
-		&-element:not(:last-child) {
-			margin-right: 0.25rem;
-		}
+	app-keyboard-key:not(:last-child) {
+		margin-right: 0.25rem;
 	}
 }
