--- a/src/app/keyboard/keyboard.component.less
+++ b/src/app/keyboard/keyboard.component.less
@@ -6,7 +6,7 @@
 		}
 	}
 
-	app-keyboard-key:not(:last-child) {
-		margin-right: 0.25rem;
+	app-keyboard-key.white:not(:last-child) {
+		margin-right: 0.125rem;
 	}
 }
