--- a/src/app/keyboard/keyboard-key/keyboard-key.component.html
+++ b/src/app/keyboard/keyboard-key/keyboard-key.component.html
@@ -1,9 +1,15 @@
-<div *ngIf="key.color === 'w'" class="key-el key-el_white">
-	<div class="key-el_tone key-el_white_tone" [appKeyOpacity]="key.tone"></div>
-	{{key.id}} : {{key.tone}}
-</div>
+<!-- <ng-container [ngSwitch]="key.color">
+	<div *ngSwitchCase="'w'" class="key-el key-el_white">
+		<div class="key-el_tone key-el_white_tone" [appKeyOpacity]="key.tone"></div>
+		{{key.id}} : {{key.tone}}
+	</div>
+	
+	<div *ngSwitchCase="'b'" class="key-el key-el_black">
+		<div class="key-el_tone key-el_black_tone" [appKeyOpacity]="key.tone"></div>
+		{{key.id}} : {{key.tone}}
+	</div>
+</ng-container> -->
 
-<div *ngIf="key.color === 'b'" class="key-el key-el_black">
-	<div class="key-el_tone key-el_black_tone" [appKeyOpacity]="key.tone"></div>
-	{{key.id}} : {{key.tone}}
+<div class="key-el key-el_{{key.color}}">
+	<div class="key-el_tone key-el_{{key.color}}_tone" [appKeyOpacity]="key.tone"></div>
 </div>
