--- a/src/app/keyboard/keyboard-key/keyboard-key.component.less
+++ b/src/app/keyboard/keyboard-key/keyboard-key.component.less
@@ -1,4 +1,5 @@
-@KEY_WIDTH: 1rem;
+@KEY_WIDTH: 1.5rem;
+@KEY_HEIGHT: 10rem;
 
 :host {
 	.key-el {
@@ -15,8 +16,8 @@
 	}
 	.key-el {
 		&_white {
-			height: 100px;
-			background-color: gray;
+			height: @KEY_HEIGHT;
+			background-color: whitesmoke;
 			position: relative;
 			z-index: 1;
 
@@ -25,9 +26,10 @@
 			}
 		}
 		&_black {
-			height: 75px;
+			height: @KEY_HEIGHT*(0.65);
 			color: white;
 			background-color: black;
+			border-top: 1px solid whitesmoke;
 
 			position: fixed;
 			z-index: 2;
