--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -1,3 +1,8 @@
-<div class="key-container">
-	<app-keyboard-key [key]="keyData.value" *ngFor="let keyData of keys | keyvalue"></app-keyboard-key>	
+<div id="keyboard-container">
+	<div id='keyboard-header'>
+		<span id="keyboard-header-3">Web Duet</span>
+	</div>
+	<div id="key-container">
+		<app-keyboard-key [key]="keyData.value" *ngFor="let keyData of keys | keyvalue"></app-keyboard-key>	
+	</div>
 </div>
