--- a/src/app/views/room/room.component.html
+++ b/src/app/views/room/room.component.html
@@ -1,5 +1,5 @@
 <mat-spinner *ngIf="loading"></mat-spinner>
 <div id="room-container" *ngIf="!loading">
 	<p>room works!</p>
-	{{roomPath}}
+	You are in: {{roomPath}}
 </div>
