--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,16 @@
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 html, body {
 	height: 100%;
+	font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
 	margin: 0;
+}
+
+.title {
+	font-family: 'Russo One', sans-serif;
+	font-size: 42px;
 }
