--- a/src/app/components/nav/nav.component.less
+++ b/src/app/components/nav/nav.component.less
@@ -10,13 +10,16 @@
 		grid-template-columns: 25% 50% 25%;
 	}
 
-	#nav-title {
+	#nav-center {
+		grid-row: 1;
+		grid-column: 1;
+	}
+	#nav-center {
 		grid-row: 1;
 		grid-column: 2;
 		text-align: center;
 	}
-
-	#nav-user {
+	#nav-right {
 		grid-row: 1;
 		grid-column: 3;
 		text-align: right;
