basic webRTC connection established over free hosts

--- a/src/app/views/matching/matching.component.html
+++ b/src/app/views/matching/matching.component.html
@@ -1,6 +1,6 @@
 <div id="join-container">
 	<div>
-		<button id="new-button" mat-raised-button color="primary" (click)="enterRoom()">New Room</button>
+		<button id="new-button" mat-raised-button color="primary" (click)="createRoom()">New Room</button>
 		<mat-card>
 			<mat-card-title>Join</mat-card-title>
 		
