change room-id display in navbar to copy-room-id button

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,7 @@
 <div id="nav-container">
-	<span id="nav-left">Current room: <br /> {{roomUUID$ | async}}</span>
+	<button *ngIf="roomUUID$ | async as roomUUID" id="nav-left" [cdkCopyToClipboard]="roomUUID">
+		<span>Current room: <br /> {{roomUUID}}</span>
+	</button>
 	<span id="nav-center" class="title">Web Duet</span>
 	<span id="nav-right">Connected as <br /> {{user$ | async}}</span>
 </div>
