--- a/src/app/components/nav/nav.component.less
+++ b/src/app/components/nav/nav.component.less
@@ -10,18 +10,17 @@
 		grid-template-columns: 25% 50% 25%;
 	}
 
-	#nav-center {
+	#nav-left {
 		grid-row: 1;
 		grid-column: 1;
+
+		cursor: copy;
 	}
 	#nav-center {
 		grid-row: 1;
 		grid-column: 2;
 		text-align: center;
-	}
-	#nav-right {
-		grid-row: 1;
-		grid-column: 3;
-		text-align: right;
+
+		cursor: pointer;
 	}
 }
