move server stuff to top-level out of angular app create basic WS server in Go bc I'm over Node move node server out of main naming for short-term posterity

--- a/src/app/views/matching/matching.component.html
+++ b/src/app/views/matching/matching.component.html
@@ -1,7 +1,8 @@
 <div id="join-container">
 	<div>
 		<button id="new-button" mat-raised-button color="primary" (click)="createRoom()">Create</button>
-		<button id="new-button" disabled mat-raised-button color="accent" (click)="joinRandom()">Random</button>
+		<button id="new-button" disabled mat-raised-button color="accent"
+		(click)="joinRandom()">Random</button>
 
 		<mat-card>
 			<mat-card-title>Custom</mat-card-title>
