--- a/src/app/components/nav/nav.component.less
+++ b/src/app/components/nav/nav.component.less
@@ -3,7 +3,7 @@
 		width: calc(100% - 1rem); // for padding + grid. y tho ?
 		height: 48px;
 		padding: 0.5rem;
-		background-color: wheat;
+		background-color: cornflowerblue;
 
 		display: grid;
 		grid-template-rows: 100%;
