start reworking FE to use BE ids instead of generating Running into issue with non-file requests to backend bc original example was limited

--- a/src/app/views/matching/matching.component.html
+++ b/src/app/views/matching/matching.component.html
@@ -1,18 +1,14 @@
 <div id="join-container">
-	<div>
-		<button id="new-button" mat-raised-button color="primary" (click)="createRoom()">Create</button>
-		<button id="new-button" disabled mat-raised-button color="accent"
-		(click)="joinRandom()">Random</button>
+	<div id="join-actions">
+		<button mat-raised-button color="primary" (click)="joinRoom()">Create</button>
 
 		<mat-card>
-			<mat-card-title>Custom</mat-card-title>
-		
+			<mat-card-title>Join</mat-card-title>
 			<mat-card-content>
 				<mat-form-field>
 					<mat-label>Room ID</mat-label>
-					<input matInput [formControl]="uuidControl">
+					<input [disabled] matInput [formControl]="uuidControl">
 					<mat-error *ngIf="uuidControl.errors?.required">Required</mat-error>
-					<mat-error *ngIf="uuidControl.errors?.minlength">Min length is 10</mat-error>
 				</mat-form-field>
 				<mat-card-actions align="end">
 					<button mat-raised-button color="primary"
